# pystack-skills

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  install.sh
evals/: README.md
evals/run 1/control/: .gitignore  README.md  docker-compose.yml  pyproject.toml
evals/run 1/control/app/: __init__.py  api.py  clients.py  config.py  database.py  errors.py  main.py  models.py  schemas.py  services.py  totals.py
evals/run 1/control/tests/: conftest.py  test_invoice_collection.py
evals/run 1/test/: .gitignore  README.md  docker-compose.yml  pyproject.toml
evals/run 1/test/app/: __init__.py  config.py  setup.py
evals/run 1/test/app/api/: exception_handlers.py  system.py
evals/run 1/test/app/api/middleware/: correlation.py  logging.py
evals/run 1/test/app/api/v1/: __init__.py  customer.py  invoice.py
evals/run 1/test/app/clients/: __init__.py  base.py  email.py  payment.py
evals/run 1/test/app/common/: __init__.py  exceptions.py  logging.py  message_bus.py  value_objects.py
evals/run 1/test/app/db/: __init__.py
evals/run 1/test/app/events/: __init__.py  invoice.py
evals/run 1/test/app/handlers/: __init__.py  email_on_invoice_issued.py  email_on_invoice_paid.py
evals/run 1/test/app/models/: __init__.py  customer.py  invoice.py
evals/run 1/test/app/outbox/: __init__.py  dispatcher.py  model.py  repo.py
evals/run 1/test/app/repos/: customer.py  invoice.py
evals/run 1/test/app/schemas/: customer.py  invoice.py
evals/run 1/test/app/services/: billing.py
evals/run 1/test/tests/: __init__.py  conftest.py
evals/run 1/test/tests/api/: test_invoice_routes.py
evals/run 1/test/tests/doubles/: email.py  payment.py
evals/run 1/test/tests/fixtures/: application.py  clients.py
evals/run 1/test/tests/unit/: test_invoice_model.py  test_payment_client.py
(+33 files in other folders)
